tests/integration/errors/non-const-initializer.it
Initializer element is not a compile-time constant

- compilation error
=========
void main() {
    int a = 2;
    int b = 2 * a;
}
=========
<stdin>:3: error: initializer element is not a compile-time constant
